# AI-Financial-Data-Validation-Engine

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/reports/: validation_20260324040137_c5e8c2a6.json  validation_20260324040137_c5e8c2a6.md  validation_20260324040302_a68d505f.json  validation_20260324040302_a68d505f.md  validation_20260324040352_72810d12.json  validation_20260324040352_72810d12.md  validation_20260324040847_a398ed5b.json  validation_20260324040847_a398ed5b.md  validation_20260324044837_90a88f82.json  validation_20260324044837_90a88f82.md  validation_20260324044915_77e7c655.json  validation_20260324044915_77e7c655.md  validation_20260324050044_2a2f38d5.json  validation_20260324050044_2a2f38d5.md
data/reports/evaluations/: eval_20260323_234158.json  eval_20260323_234158.md  eval_20260323_234434.json  eval_20260323_234434.md  eval_20260323_234618.json  eval_20260323_234618.md
data/state/: app.sqlite
docs/: architecture.md
hierarchy_migration_validation_agent/: __init__.py
scripts/: run_eval.py
src/hierarchy_migration_validation_agent/: __init__.py  config.py
src/hierarchy_migration_validation_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/hierarchy_migration_validation_agent/agent/: reasoner.py  workflow.py
tests/: conftest.py  test_config.py  test_embeddings.py  test_ingestion.py  test_integration_flow.py  test_normalization.py  test_rag.py  test_validation_text.py  test_validations.py
tmp_check/: measure_only_source.xlsx  measure_only_target.xlsx
(+20 files in other folders)
